fixing chi-siamo modals

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -188,10 +188,10 @@
             <div class="medium-6 large-6 columns">
                 <span class="extra-space show-for-small"></span>
                 <h3>Cosa dice la stampa</h3>
-                <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Media Kit</a>
+                <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Press Kit</a>
                 <div id="press-kit" class="reveal-modal" data-reveal>
                     <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="extra-space-text-tab-contatti">
-                        <div class="row">
+                        <div class="row extra-space-modal">
                             <div class="small-6 medium-5 columns">  
                                 <label>Nome
                                     <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
@@ -232,7 +232,7 @@
                                 <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
                             </div>
                             <div class="small-12 medium-12 columns">
-                                <input type="submit" value="Iscriviti e Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
+                                <input type="submit" value="Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
                             </div>
                         </div>
                         <a class="close-reveal-modal">&#215;</a>
@@ -248,155 +248,6 @@
             </div>
         </div>
     </div>
-
-
-                           
-<!-- inizio tabbar recensioni-->
-        <!-- <section role="tabpanel" aria-hidden="false" class="content" id="recensioni">
-            <div class="row">
-                <div class="medium-12 large-12 columns">
-                    <h1>Recensioni</h1>
-                    <hr>
-                    <div class="row">
-                        <div class="medium-6 large-6 columns">
-                            <div class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h2>Cosa dicono i clienti</h2>
-                                    <a role="button" href="#" class="button extra-space-button" data-reveal-id="recensione-reveal">Scrivi una recensione
-                                    </a>
-                                    <div id="recensione-reveal" class="reveal-modal" data-reveal>
-                                        <form action="input">
-                                            <div class="row">
-                                                <div class="small-10 medium-7 large-5 columns">  
-                                                    <label>Nome e Cognome
-                                                        <input type="text" placeholder="Nome Cognome" />
-                                                    </label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="small-12  medium-7 large-5 columns">  
-                                                    <label>Email
-                                                        <input type="email" placeholder="esempio@esempio.it" />
-                                                      </label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="small-12  medium-9 large-7 columns end">  
-                                                    <label>Recensione:
-                                                        <textarea placeholder="Scrivi una recensione"></textarea>
-                                                      </label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="small-12 medium-12 large-12 columns">
-                                                    <a role="button" href="#" class="button extra-space-button">Posta la recensione</a>
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <a class="close-reveal-modal">&#215;</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h3>Gin perfeto</h3>
-                                    <h6 class="by-line">Scritto il 21 Ottobre 2014</h6>  
-                                    <blockquote cite="http:example.com">Mi è piaciuto molto il Gin Tonic a base di Hendrick.<cite>Yuri</cite></blockquote>
-                                </div> 
-                            </article>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h3>Un posto stupendo</h3>
-                                    <h6 class="by-line">Scritto il 21 Ottobre 2014.</h6>
-                                    <blockquote>Meraviglioso il posto, stupendo il cibo, incredibili le birre e l'enorme selezione. Solo e rigorosamente birre artigianali.<cite>Andrew</cite></blockquote>
-                                </div> 
-                            </article>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h3>Che birre!!!!</h3>
-                                    <h6 class="by-line">Scritto il 16 Settembre 2014.</h6>  
-                                    <blockquote>Wow Wow Wow. Il cibo era incredibilmente buono. Consiglio gli hamburger. Sembrano costosi, ma ci mangi quasi in due con uno... 220 grammi di carne fantastica. Io ho bevuto una Beerstrot IPA alla spina, buona, buona, buona. Mia moglie ha preso un bicchiere di vino del monte amiata. Le è piaciuto. Lo consiglio vivamente a tutti quanti.<cite>Andrea</cite></blockquote>
-                                </div> 
-                            </article>
-                        </div>
-                        <div class="medium-6 large-6 columns">
-                            <span class="extra-space show-for-small"></span>
-                            <div class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h2>Cosa dice la stampa</h2>
-                                    <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Media Kit
-                                    </a>
-                                    <div id="press-kit" class="reveal-modal" data-reveal>
-                                        <form action="input">
-                                            <div class="row">
-                                                <div class="small-10 medium-6 large-5 columns">  
-                                                    <label>Nome e Cognome
-                                                        <input type="text" placeholder="Nome Cognome" />
-                                                    </label>
-                                                </div>
-                                                <div class="small-12  medium-8 large-5 columns end">  
-                                                    <label>Email
-                                                        <input type="email" placeholder="esempio@esempio.it" />
-                                                      </label>
-                                                </div> 
-                                            </div>
-                                            <div class="row">
-                                                <div class="small-6  medium-5 large-3 columns">  
-                                                    <label>Telefono
-                                                        <input type="tel" placeholder="telefono" />
-                                                      </label>
-                                                </div>
-                                                <div class="small-6 medium-5 large-4 columns end">  
-                                                    <label>Professione
-                                                        <select>
-                                                            <option value="0"></option>
-                                                            <option value="1">Giornalista</option>
-                                                            <option value="2">Blogger</option>
-                                                            <option value="3">Altro</option>
-                                                        </select>
-                                                      </label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="small-12 medium-12 large-12 columns">
-                                                    <a role="button" href="#" class="button extra-space-button">Scarica il Media Kit</a>
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <a class="close-reveal-modal">&#215;</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns">
-                                    <h3>Di meglio non esiste</h3>
-                                    <h6 class="by-line">Apparso il 21 Ottobre 2014 sulla <strong>Repubblica</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
-                                    <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
-                                </div> 
-                            </article>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns extra-space">
-                                    <h3>Birre davvero oltraggiose per forza e carattere</h3>
-                                    <h6 class="by-line">Apparso il 21 Ottobre 2014 sul <strong>Corriere della Sera</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Reccoboni</cite></blockquote>
-                                    <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
-                                </div> 
-                            </article>
-                            <article class="row">  
-                                <div class="medium-12 large-12 columns extra-space">
-                                    <h3>Se non ci foste stati voi</h3>
-                                    <h6 class="by-line">Apparso il 21 Ottobre 2014 su <strong>www.chebirra.it</strong></h6>  
-                                    <blockquote cite="http:repubblica.com/Beerstrotbeer">Ho visitato Beerstrot per curiosità passando da Recanati e Loreto. Ho trovato il tutto estremamente curato e strong ...<cite>Alda Merini</cite></blockquote>
-                                    <a href="http://repubblica.it">Leggi la recensione &rarr;</a>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-<!-- fine tabbar recensioni-->        
 <!-- inizio footer -->
     <footer class="panel-prefooter">
         <div class="row">
