--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
