--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -232,7 +232,7 @@
                                 <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
                             </div>
                             <div class="small-12 medium-12 columns">
-                                <input type="submit" value="Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
+                                <input type="submit" value="Iscriviti e Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
                             </div>
                         </div>
                         <a class="close-reveal-modal">&#215;</a>
