--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -167,7 +167,7 @@
                 <a role="button" href="#" class="button extra-space-button" data-reveal-id="recensione-reveal">Scrivi una recensione
                 </a>
                 <div id="recensione-reveal" class="reveal-modal" data-reveal>
-                    <div id="TA_cdswritereviewlg95" class="TA_cdswritereviewlg">
+                    <div id="TA_cdswritereviewlg95" class="TA_cdswritereviewlg extra-space-modal">
                         <ul id="LeFVftT" class="TA_links DF7eO8hGYA">
                             <li id="6cQyEIcGSb" class="JTcffh">
                             <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/img2/branding/medium-logo-12097-2.png" alt="TripAdvisor"/></a>
