fixing modal fields length

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -192,12 +192,12 @@
                 <div id="press-kit" class="reveal-modal" data-reveal>
                     <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="extra-space-text-tab-contatti">
                         <div class="row extra-space-modal">
-                            <div class="small-6 medium-5 columns">  
+                            <div class="small-6 medium-5 large-4 columns">  
                                 <label>Nome
                                     <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
                                 </label>
                             </div>
-                            <div class="small-6 medium-5 columns end">  
+                            <div class="small-6 medium-5 large-4 columns end">  
                                 <label>Cognome
                                     <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Cognome" />
                                 </label>
