--- a/menu/index.html
+++ b/menu/index.html
@@ -40,12 +40,18 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
+    <header class="row">
+        <div class="medium-12 large-12 columns">
+            <h1>Menù</h1>
+            <hr>
+        </div>
+    </header>
 <!-- inizio tabbar switch-->
     <div class="row">
         <div class="medium-12 large-12 small-12 columns extra-space-hero">
             <ul class="tabs" data-tab data-options="deep_linking:false; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
-                    <a href="#menu" role="tab" tabindex="0" aria-selected="true" controls="menu">Menu</a>
+                    <a href="#cibo" role="tab" tabindex="0" aria-selected="true" controls="cibo">Cibo</a>
                 </li>
                 <li class="tab-title" role="presentational">
                     <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
@@ -63,7 +69,7 @@
 <!-- tab inizio --> 
     <div class="tabs-content" id="menupage-text"> 
 <!-- cibo --> 
-        <section class="content active" role="tabpanel" aria-hidden="false" id="menu">
+        <section class="content active" role="tabpanel" aria-hidden="false" id="cibo">
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
