--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Chi Siamo</title>
-    <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo."/>
+    <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo. Pub, Birreria o Birstrot? Decidi tu."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
