--- a/menu/index.html
+++ b/menu/index.html
@@ -102,7 +102,7 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Pasta Fresca</h2>
+                        <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></a></h3>    
