--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
-            <p>Non abbiamo idea di dove sia la pagina che cerchi.</p>
+            <p>Se cerchi il video linkato in Facebook, sarà on-line verso il primo di Maggio &hellip;del 2015!</p>
             <a href="http://beerstrot.it">Torna a casa</a>
         </div>
     </div>
