--- a/menu/index.html
+++ b/menu/index.html
@@ -88,7 +88,7 @@
                                 <p>Asparagi in sfoglia con prosciutto crudo</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Marchiggiana<span class="right">5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
                                 <p>Fritto misto di verdure e formaggi</p>
                             </li>
                             <li>
