--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -85,8 +85,8 @@
                 </ul>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p><strong>Amiamo la birra artigianale e il buon cibo.</strong></p>
-                <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in midtown Manhattan.</p> 
+                <p><strong>Amiamo la birra artigianale e il buon cibo</strong></p>
+                <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan.</p> 
                 <p>Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
             </div>
         </div>
