--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -148,7 +148,7 @@
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
-                <p><strong>Birre Artigianali strepitose, Cibo fantastico, Location incredibile.</strong></p>
+                <p><strong>Birre Artigianali strepitose, Cibo fantastico, Location incredibile</strong></p>
                 <p>Non ti basta tutto questo? <br>Serviamo anche ottimo vino, ottimi cocktail&mdash;&#8201;una piccola selezione di eccellente qualità&#8201;&mdash; e pasta&#8201;&hellip;</p> 
                 <p>Non ti basta neppure questo? <br>Facciamo anche musica e spettacoli dal vivo&hellip; e alette di pollo e costine in bbq. Poi facciamo dolci strepitosi.</p>
                 <p><strong>&hellip; e non siamo cari</strong>!</p>
