--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
-                <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
+                <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
                 <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
             </div>
         </div>
