--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Logo Completo" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
+                <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
                 <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
                 <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
             </div>
