--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -112,7 +112,7 @@
     <div class="row">
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.it/menu#fndtn-birra" class="left">&larr; Torna al menu</a>
+                <a href="http://beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
                 <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
             </div>
         </div> 
