--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -121,7 +121,7 @@
 <!-- inizio commenti -->
     <div class="row extra-space">
         <aside class="medium-5 large-4 columns">
-            <h2>Commenta la Birra</h2>
+            <h2>Commenta</h2>
         </aside>
         <div class="medium-7 large-8 columns extra-space-commenti">
                 <div id="disqus_thread"></div>
