--- a/menu/cibo/peperoncini-e-pancetta.html
+++ b/menu/cibo/peperoncini-e-pancetta.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Peperoncini Piccanti</title>
+    <title>Beerstrot | Peperoncini e Pancetta</title>
     <meta name="description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Peperoncini Piccanti e Pancetta"/>
+    <meta name="twitter:title" content="Peperoncini e Pancetta"/>
     <meta name="twitter:description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante."/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Peperoncini Piccanti e Pancetta"/>
+    <meta property="og:title" content="Peperoncini e Pancetta"/>
     <meta property="og:description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
@@ -52,13 +52,13 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/ape-regina.jpg" alt="Birra Ape Regina"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg" alt="Birra Ape Regina"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Peperoncini Piccanti e Pancetta</h1>
+                        <h1>Peperoncini e Pancetta</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
                         <h6 class="by-line">Foto <a href="http://www.mc-77.com/">Birrificio MC-77</a></h6>
                     </div>
@@ -89,13 +89,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
 <!-- inizio commenti -->
     <div class="row extra-space">
         <aside class="medium-5 large-4 columns">
-            <h2>Commenta la Birra</h2>
+            <h2>Commenta</h2>
         </aside>
         <div class="medium-7 large-8 columns extra-space-commenti">
                 <div id="disqus_thread"></div>
