--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -60,7 +60,7 @@
                     <div class="medium-12 large-12 columns">
                         <h1>Ape Regina</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
-                            <h6 class="by-line">Foto <a href="http://www.mc-77.com/">Birrificio MC-77</a></h6>
+                            <h6 class="by-line">Foto <a href="http://www.mc-77.com/" target="_blank">Birrificio MC-77</a></h6>
                         <div class="share-block">
                             <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 6,4% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
                             <h6 class="by-line">COLORE: Dorato | SAPORE: Dolce/Amaro</h6>
