--- a/menu/cibo/peperoncini-e-pancetta.html
+++ b/menu/cibo/peperoncini-e-pancetta.html
@@ -60,7 +60,7 @@
                     <div class="medium-12 large-12 columns">
                         <h1>Peperoncini e Pancetta</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
-                        <h6 class="by-line">Foto <a href="http://www.mc-77.com/">Birrificio MC-77</a></h6>
+                        <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
             </header>
