--- a/menu/cibo/peperoncini-e-pancetta.html
+++ b/menu/cibo/peperoncini-e-pancetta.html
@@ -66,16 +66,10 @@
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Divina e dorata</h2>
-            <p >Blonde Ale di ispirazione belga con aggiunta di miele di acacia.</p>
-            <p>Il profumo dolce di miele si unisce ai componenti aromatici fruttati e speziati donati dal lievito. In bocca è morbida e maltata, la leggera luppolatura ne bilancia il gusto. Il corpo strutturato accompagna il tenore alcolico e ne risulta una birra dal retrogusto persistente.</p>
-            <blockquote>
-                <p>Seduce, d'oro vestita e dolce di miele questo è un lato della questione ... l'altro, amico mio, è che appena nata uccide perché vuole essere l'unica.. Ciò che comincia dolce finisce amaro e ciò che comincia amaro finisce dolce. Lei sola e madre di tutte, lei: Ape Regina.
-                <cite>Birrificio MC-77</cite>
-                 </p>
-            </blockquote>
+            <h2>Piccante, ma non troppo</h2>
+            <p>Peperoncini piccanti e pancetta, un piatto gustoso per gli amanti di cose saporite, ma delicate.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Ideale per formaggi extra stagionati.</p>  
+            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina</a>: una birra superba che smorza la piccantezza del peperoncino e risalta l'affumicato della pancetta.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -108,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
+                <a href="http://beerstrot.it/menu/frittelle-di-capperi.html" class="right">Frittelle di capperi &rarr;</a>
             </div>
         </div> 
     </div>
