Add target _blank

--- a/menu/cibo/peperoncini-e-pancetta.html
+++ b/menu/cibo/peperoncini-e-pancetta.html
@@ -69,7 +69,7 @@
             <h2>Piccante, ma non troppo</h2>
             <p>Peperoncini piccanti e pancetta, un piatto gustoso per gli amanti di cose saporite, ma delicate.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina</a>: una birra superba che smorza la piccantezza del peperoncino e risalta l'affumicato della pancetta.</p>  
+            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/ape-regina.html" target="_blank">Ape Regina</a>: una birra superba che smorza la piccantezza del peperoncino e risalta l'affumicato della pancetta.</p>  
         </div>
     </div>
 <!-- fine articolo -->
