--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/burlesque.jpg" alt="Violino" />
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/burlesque.jpg" alt="Burlesque" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
