--- a/menu/cibo/peperoncini-e-pancetta.html
+++ b/menu/cibo/peperoncini-e-pancetta.html
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg" alt="Birra Ape Regina"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg" alt="Peperoncini e Pancetta"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
