--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -94,7 +94,7 @@
     <div class="panel-home-2n">
         <div class="row">
             <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
-                <h2>Location</h2>
+                <h2>Dove Siamo e Cosa Facciamo</h2>
             </div>
         </div>
         <div class="row">
@@ -148,10 +148,11 @@
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
-                <p><strong>Birre Artigianali strepitose, Cibo fantastico, Location incredibile</strong></p>
-                <p>Non ti basta tutto questo? <br>Serviamo anche ottimo vino, ottimi cocktail&mdash;&#8201;una piccola selezione di eccellente qualità&#8201;&mdash; e pasta&#8201;&hellip;</p> 
-                <p>Non ti basta neppure questo? <br>Facciamo anche musica e spettacoli dal vivo&hellip; e alette di pollo e costine in salsa bbq. Poi facciamo dolci strepitosi.</p>
-                <p><strong>&hellip; e non siamo cari</strong>!</p>
+                <p><strong>Abbiamo scelto una location incredibile</strong></p>
+                <p>Tra nuvole e colline, per offrirti solo il meglio: Birre Artigianali strepitose, Cibo fantastico! Ti conquisteremo con i nostri hamburger dalla qualità eccellente e dal sapore indimenticabile, e con le sfiziose alette di pollo e le costine in salsa bbq.</p>
+                <p>Non ti basta tutto questo? <br>Serviamo anche ottimo vino, cocktail prelibati&mdash;&#8201;una piccola selezione di eccellente qualità&#8201;&mdash; e pasta e dolci fatti in casa.</p>
+                <p>Non ti basta neppure questo? <br>Da noi trovi anche musica e spettacoli dal vivo!</p>
+                <p>Che altro aggiungere? Ti stupiremo anche con i nostri prezzi<strong>&#8201;&hellip; No, non siamo cari!</strong>!</p>
             </div>
         </div>
     </div>
