--- a/contatti/press-kit/index.html
+++ b/contatti/press-kit/index.html
@@ -148,7 +148,7 @@
                 <p><em>Chiuso il Lunedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
-                <h4 class="subheader">Paga con</h4>
+                <h4 class="subheader">Accettiamo</h4>
                 <ul class="block-grid-cards-3">
                     <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 106.2" style="max-width: 80px"  enable-background="new 0 0 170 106.2"><g><path class="img-cards" fill="#3A58A8" d="M169.9 100.5c0 3.1-2.6 5.7-5.7 5.7H5.7c-3.1 0-5.7-2.6-5.7-5.7V5.7C0 2.6 2.6 0 5.7 0h158.6c3.1 0 5.7 2.6 5.7 5.7v94.8h-.1z"/><g fill="#fff"><path d="M78.2 69.1h-8.3l5.2-32h8.3zM62.9 37.1l-7.9 22-.9-4.7L51.2 40s-.3-2.8-3.9-2.8H34.2l-.2.5s4.1.8 8.7 3.7L50 69.1h8.7l13.1-32h-8.9zM128.2 69.1h7.6l-6.6-31.8h-6.6c-3.1 0-3.8 2.4-3.8 2.4l-12.3 29.4h8.7l1.8-4.7h10.6l.6 4.7zm-9.1-11.4l4.3-11.9 2.4 11.9h-6.7zM106.9 44.8l1.2-6.9s-3.7-1.3-7.5-1.3c-4.1 0-14 1.8-14 10.6 0 8.3 11.5 8.4 11.5 12.6 0 4.3-10.3 3.5-13.7.8l-1.2 7.2s3.7 1.8 9.3 1.8c5.7 0 14.2-3 14.2-11 0-8.3-11.6-9.1-11.6-12.6.3-3.6 8.3-3.1 11.8-1.2z"/></g><path fill="#FAA634" d="M54 54.3L51.2 40s-.3-2.8-3.9-2.8H34.1l-.1.5s6.2 1.3 12.3 6.2c5.9 4.6 7.7 10.4 7.7 10.4z"/></g></svg>
