--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header class="panel-home">
         <div class="row" itemscope itemtype="http://schema.org/Restaurant">
             <div class="medium-6 large-6 columns" >
-                <h1 class="text-center" itemprop="description">Birra artigianale e alta cucina&#8201;&#8230;<br>alla portata di tutti</h1>
+                <h1 class="text-center" itemprop="description">Per chi ama la birra artigianale e il buon cibo</h1>
             </div>
             <div class="small-centerd small-12  medium-6 large-6 columns">
                 <img src="http://beerstrot.it/asset/img/medium/birreria.jpg" alt="">
