--- a/menu/index.html
+++ b/menu/index.html
@@ -194,7 +194,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">4</span></a></h3>    
-                                <p>Patate fritte tagliate a mano  con la pelle</p>
+                                <p>Patate fritte tagliate a mano con la buccia</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">4</span></a></h3>    
