fixing event e menu

--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -67,8 +67,8 @@
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
-                                <h5 class="date" style="margin-top: 0.5em;">25 Aprile 2014</h5>
-                                <h5>Dalle 17:00 alle 22:00</h5>
+                                <h5 class="date" style="margin-top: 0.5em;">30 Aprile 2015</h5>
+                                <h5>Dalle 17:00 alle 19:00</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
@@ -76,10 +76,11 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Un evento per tossici della birra</h2>
-                <p>Per il ciclo: Si parte&#8202;&mdash;&#8202;Il Burlesque. 
-                <p>Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo.</p>
-                <p>Raffinatissimo, elegantissimmo e incredibilmente ironico: le signore lo adoreranno.</p>
+                <h2>Un evento per tossici della birra, hamburger e non solo</h2>
+                <p>Per il ciclo: Si parte. 
+                <p>Piccolo rinfresco per amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
+                <p>Giulia, Andrea e Giovanni vi aspettano dalle 17 per un piccolo rinfresco di apertura.</p>
+                <p>Dal 1 Maggio potrete gustare le fantastiche birre artigianali e i succulenti piatti preparati da Giovanni e Jacopo a partire dalle 12:00.</p>
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
