--- a/menu/index.html
+++ b/menu/index.html
@@ -144,27 +144,27 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">8,5</span></a></h3>    
-                                <p>200 granni di manzo, cipolla caramellata, insalata, fontina</p>
+                                <p>180 grammi di manzo, cipolla caramellata, insalata, fontina</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">9,5</span></a></h3>    
-                                <p>200 granni di manzo, salsa piccante, pancetta, cheddar, rucola</p>
+                                <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,5</span></a></h3>    
-                                <p>200 granni di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
+                                <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">10</span></a></h3>    
-                                <p>200 granni di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
+                                <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">13</span></a></h3>    
-                                <p>150 granni di salmone, doppia panna, aneto, limone, rucola</p>
+                                <p>150 grammii di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">7,5</span></a></h3>    
-                                <p>200 grammi di ceci, composta sweet, rucola</p>
+                                <p>150 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
                     </div>   
