--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/burlesque.jpg" alt="Burlesque" />
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
@@ -77,8 +77,8 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Un evento per tossici della birra, hamburger e non solo</h2>
-                <p>Per il ciclo: Si parte. 
-                <p>Piccolo rinfresco per amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
+                <p>Per il ciclo: Si parte.</p>
+                <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
                 <p>Giulia, Andrea e Giovanni vi aspettano dalle 17 per un piccolo rinfresco di apertura.</p>
                 <p>Dal 1 Maggio potrete gustare le fantastiche birre artigianali e i succulenti piatti preparati da Giovanni e Jacopo a partire dalle 12:00.</p>
 <!-- call to action inizio -->
