--- a/eventi/index.html
+++ b/eventi/index.html
@@ -51,16 +51,16 @@
         <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">25 Apr 2014</h3>
-                    <h5>Orario: 17:00-22:00</h5>
+                    <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
+                    <h5>Orario: 17:00-19:00</h5>
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/burlesque-th.jpg" alt="Burlesque"></a>
+                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/costine-in-salsa-bbq-th.jpg" alt="Costine in Salsa BBQ"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
-                    <h2>Apertura col botto</h2>
-                    <p>Iniziano le danze e le bevute con uno spettacolo indimenticabile, birre fantastiche e hamburger incredibili</p>
+                    <h2>Un evento per tossici della birra, hamburger e non solo</h2>
+                    <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
                     <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
 <!-- ATTENZIONE-->
